# irvi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  check_package.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_example.py  paired_tcr_example.py
irvi/: __init__.py
irvi/data/: __init__.py  _tcr_field.py
irvi/model/: __init__.py  _irvi.py
irvi/module/: __init__.py  _irvae.py
tests/: test_irvi.py
